@@ -1,6 +1,6 @@
 url;file;result;test
--;-;-;freeRouter-rare v24.1.23-cur, done by sprscc13@mr.n0b0dy.
--;-;-;2024-01-23 16:38:05, took 00:07:12, with 60 workers, on 534 cases, 0 failed, 0 traces, 0 retries
+-;-;-;freeRouter-rare v24.1.24-cur, done by sprscc13@mr.n0b0dy.
+-;-;-;2024-01-24 06:46:40, took 00:11:22, with 60 workers, on 534 cases, 0 failed, 0 traces, 0 retries
 -;-;-;./rtr.bin
 http://sources.freertr.org/cfg/p4lang-acl001.tst;p4lang-acl001.tst;success;p4lang: copp
 http://sources.freertr.org/cfg/p4lang-acl002.tst;p4lang-acl002.tst;success;p4lang: ingress access list
