@@ -14,8 +14,8 @@
 .bad { color: red }
 </style>
 <title>tester</title></head><body>
-release: freeRouter-rare v24.1.23-cur, done by sprscc13@mr.n0b0dy.<br/>
-tested: 2024-01-23 16:38:05, took 00:07:12, with 60 workers, on 534 cases, 0 failed, 0 traces, 0 retries<br/>
+release: freeRouter-rare v24.1.24-cur, done by sprscc13@mr.n0b0dy.<br/>
+tested: 2024-01-24 06:46:40, took 00:11:22, with 60 workers, on 534 cases, 0 failed, 0 traces, 0 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
